--- a/paginas/expositores.html
+++ b/paginas/expositores.html
@@ -10,30 +10,30 @@
     <script src="https://kit.fontawesome.com/caac178fdb.js" crossorigin="anonymous"></script>
 <body>
     <nav class="Nav">
-        <img src="/IMGS/logo.webp" alt="Logo UNAD-ICETEX" class="Nav_img" >
+        <a href="/"><img src="/IMGS/logo.webp" alt="Logo UNAD-ICETEX" class="Nav_img" /></a>
         <ul class="Nav_ul">
-            <a href="/" class="Nav_ul-a">Inicio</a>
-            <a href="/paginas/actividades.html" class="Nav_ul-a">Actividades</a>
-            <a href="/paginas/expositores.html" class="Nav_ul-a">Expositores</a>
-            <a href="/paginas/faq.html" class="Nav_ul-a">FAQ</a>
-            <a href="/paginas/registro.html" class="Nav_ul-a">Registro</a>
-            <a href="/paginas/contacto.html" class="Nav_ul-a">Contacto</a>
-            <div class="idiomaContenedor">
-                <button class="cambiarIdioma">Cambiar idioma</button>
-                <div class="contenedorIdiomas" id="contenedorIdiomas">
-                    <p>Español</p>
-                    <p>Ingles</p>
-                </div>
+          <a href="/" class="Nav_ul-a" id="Nav_Inicio">Inicio</a>
+          <a href="/paginas/actividades.html" class="Nav_ul-a" id="Nav_Actividades">Actividades</a>
+          <a href="/paginas/expositores.html" class="Nav_ul-a" id="Nav_Expositores">Expositores</a>
+          <a href="/paginas/faq.html" class="Nav_ul-a" id="Nav_FAQ">FAQ</a>
+          <a href="/paginas/registro.html" class="Nav_ul-a" id="Nav_Registro">Registro</a>
+          <a href="/paginas/contacto.html" class="Nav_ul-a" id="Nav_Contacto">Contacto</a>
+          <div class="idiomaContenedor">
+            <button class="cambiarIdioma" id="ChangeLanguageBTN">Cambiar idioma</button>
+            <div class="contenedorIdiomas" id="contenedorIdiomas">
+              <p id="Spanish">Español</p>
+              <p id="English">Ingles</p>
             </div>
+          </div>
         </ul>
-    </nav>
+      </nav>
 
     <section class="Expositores">
         <article class="expositor">
             <img src="/IMGS/Expositores/Maikel.jpeg" alt="" class="expositor_img">
             <div class="info">
                 <p class="info_nombre">Maikel</p>
-                <p class="info_edad">24 años</p>
+                <p class="info_edad">24  <span id="YearsMaikel">años</span></p>
 
             </div>
             <div class="informacion-especialidad">
@@ -42,15 +42,16 @@
             </div>
             <div class="descripcion">
                 <p class="descripcion_p-1">Descripción</p>
-                <p class="descripcion_p-2">Soy Maike, y mi pasión es hacer que el fascinante mundo de la informática sea accesible y emocionante para todos. Me dedico a desmitificar los conceptos complejos, mostrando cómo la lógica y la creatividad se unen para crear soluciones tecnológicas innovadoras. Mi objetivo es guiarte a través de este viaje digital, brindándote las herramientas y la comprensión necesarias para que no solo entiendas la tecnología, sino que también puedas aplicarla y crear con ella.</p>
+                <p class="descripcion_p-2 descripcion_p-2-Maikel">Soy Maike, y mi pasión es hacer que el fascinante mundo de la informática sea accesible y emocionante para todos. Me dedico a desmitificar los conceptos complejos, mostrando cómo la lógica y la creatividad se unen para crear soluciones tecnológicas innovadoras. Mi objetivo es guiarte a través de este viaje digital, brindándote las herramientas y la comprensión necesarias para que no solo entiendas la tecnología, sino que también puedas aplicarla y crear con ella.</p>
             </div>
             </div>
         </article>
+
         <article class="expositor">
-            <img src="/IMGS/Expositores/Maikel.jpeg" alt="" class="expositor_img">
+            <img src="https://d39ozdhkcyy1f8.cloudfront.net/110823_luis_miguel_853d16433f.jpg" alt="" class="expositor_img">
             <div class="info">
-                <p class="info_nombre">Maikel</p>
-                <p class="info_edad">24 años</p>
+                <p class="info_nombre">Miguel</p>
+                <p class="info_edad">24  <span id="YearsMiguel">años</span></p>
 
             </div>
             <div class="informacion-especialidad">
@@ -59,24 +60,25 @@
             </div>
             <div class="descripcion">
                 <p class="descripcion_p-1">Descripción</p>
-                <p class="descripcion_p-2">Soy Maike, y mi pasión es hacer que el fascinante mundo de la informática sea accesible y emocionante para todos. Me dedico a desmitificar los conceptos complejos, mostrando cómo la lógica y la creatividad se unen para crear soluciones tecnológicas innovadoras. Mi objetivo es guiarte a través de este viaje digital, brindándote las herramientas y la comprensión necesarias para que no solo entiendas la tecnología, sino que también puedas aplicarla y crear con ella.</p>
+                <p class="descripcion_p-2 descripcion_p-2-Miguel">Soy Miguel, y me apasiona el mundo de la informática y su capacidad para transformar ideas en realidades. Mi objetivo es ayudarte a comprender este universo digital desde sus fundamentos, con un enfoque claro y profundo.</p>
             </div>
             </div>
         </article>
+
         <article class="expositor">
-            <img src="/IMGS/Expositores/Maikel.jpeg" alt="" class="expositor_img">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSUJsZ1Fkj7Aj2MGsy_rIwmLKz54UD_Aq4YzQ&s" alt="" class="expositor_img">
             <div class="info">
-                <p class="info_nombre">Maikel</p>
-                <p class="info_edad">24 años</p>
+                <p class="info_nombre">Laura</p>
+                <p class="info_edad">24  <span id="YearsLaura">años</span></p>
 
             </div>
             <div class="informacion-especialidad">
                 <p class="informacion_p1">Especialidad</p>
-                <p class="informacion_p2">Informática</p>
+                <p class="informacion_p2 informacion_p2-Electro">Electrónica</p>
             </div>
             <div class="descripcion">
                 <p class="descripcion_p-1">Descripción</p>
-                <p class="descripcion_p-2">Soy Maike, y mi pasión es hacer que el fascinante mundo de la informática sea accesible y emocionante para todos. Me dedico a desmitificar los conceptos complejos, mostrando cómo la lógica y la creatividad se unen para crear soluciones tecnológicas innovadoras. Mi objetivo es guiarte a través de este viaje digital, brindándote las herramientas y la comprensión necesarias para que no solo entiendas la tecnología, sino que también puedas aplicarla y crear con ella.</p>
+                <p class="descripcion_p-2 descripcion_p-2-Laura">Soy Laura, una apasionada de la electrónica, y mi misión es despertar la curiosidad y el entusiasmo por esta increíble área. Me encanta enseñar de forma práctica y divertida, mostrando cómo los componentes y circuitos pueden dar vida a grandes ideas.</p>
             </div>
             </div>
         </article>
@@ -106,4 +108,6 @@
         <p>&copy; Juan Pablo García Ramos</p>
         </footer>
 </body>
+<script src="/data/cambioIdiomaExpositores.js"></script>
+<script src="/data/nav.js"></script>
 </html>
