--- a/paginas/faq.html
+++ b/paginas/faq.html
@@ -11,44 +11,44 @@
 </head>
 <body>
     <nav class="Nav">
-        <img src="/IMGS/logo.webp" alt="Logo UNAD-ICETEX" class="Nav_img" >
+        <a href="/"><img src="/IMGS/logo.webp" alt="Logo UNAD-ICETEX" class="Nav_img" /></a>
         <ul class="Nav_ul">
-            <a href="/" class="Nav_ul-a">Inicio</a>
-            <a href="/paginas/actividades.html" class="Nav_ul-a">Actividades</a>
-            <a href="/paginas/expositores.html" class="Nav_ul-a">Expositores</a>
-            <a href="/paginas/faq.html" class="Nav_ul-a">FAQ</a>
-            <a href="/paginas/registro.html" class="Nav_ul-a">Registro</a>
-            <a href="/paginas/contacto.html" class="Nav_ul-a">Contacto</a>
-            <div class="idiomaContenedor">
-                <button class="cambiarIdioma">Cambiar idioma</button>
-                <div class="contenedorIdiomas" id="contenedorIdiomas">
-                    <p>Español</p>
-                    <p>Ingles</p>
-                </div>
+          <a href="/" class="Nav_ul-a" id="Nav_Inicio">Inicio</a>
+          <a href="/paginas/actividades.html" class="Nav_ul-a" id="Nav_Actividades">Actividades</a>
+          <a href="/paginas/expositores.html" class="Nav_ul-a" id="Nav_Expositores">Expositores</a>
+          <a href="/paginas/faq.html" class="Nav_ul-a" id="Nav_FAQ">FAQ</a>
+          <a href="/paginas/registro.html" class="Nav_ul-a" id="Nav_Registro">Registro</a>
+          <a href="/paginas/contacto.html" class="Nav_ul-a" id="Nav_Contacto">Contacto</a>
+          <div class="idiomaContenedor">
+            <button class="cambiarIdioma" id="ChangeLanguageBTN">Cambiar idioma</button>
+            <div class="contenedorIdiomas" id="contenedorIdiomas">
+              <p id="Spanish">Español</p>
+              <p id="English">Ingles</p>
             </div>
+          </div>
         </ul>
-    </nav>
+      </nav>
 
-    <h1>Preguntas frecuentes</h1>
+    <h1 id="FAQTitle">Preguntas frecuentes</h1>
 
 <section class="FAQs">
     <details class="FAQ">
-        <summary open >¿Quiénes pueden participar en la ExpoTech?</summary>
-        <p class="FAQ-p">
+        <summary open id="Pregunta1">¿Quiénes pueden participar en la ExpoTech?</summary>
+        <p class="FAQ-p" id="Pregunta1_Respuesta">
          Generalmente, pueden participar estudiantes de distintos niveles educativos, así como docentes, investigadores, startups tecnológicas y entusiastas de la innovación. Algunos eventos también están abiertos a la comunidad en general. 
         </p>
     </details>
 
     <details class="FAQ">
-        <summary open  >¿Qué tipo de proyectos se pueden presentar?  </summary>
-        <p class="FAQ-p">
+        <summary open id="Pregunta2">¿Qué tipo de proyectos se pueden presentar?  </summary>
+        <p class="FAQ-p" id="Pregunta2_Respuesta">
         Se aceptan proyectos relacionados con tecnología, ciencia, electrónica, programación, robótica, energías renovables, realidad aumentada/virtual, inteligencia artificial, entre otros. Pueden ser prototipos físicos, apps, investigaciones o demostraciones interactivas. 
         </p>
     </details>
 
     <details class="FAQ">
-        <summary open  >¿Cómo se evalúan los proyectos en la ExpoTech? </summary>
-        <p class="FAQ-p">
+        <summary open id="Pregunta3">¿Cómo se evalúan los proyectos en la ExpoTech? </summary>
+        <p class="FAQ-p" id="Pregunta3_Respuesta">
         Los proyectos suelen ser evaluados por un jurado especializado bajo criterios como innovación, aplicabilidad, originalidad, nivel técnico, presentación y utilidad. Algunos eventos también incluyen votaciones del público. 
         </p>
     </details>
@@ -81,4 +81,5 @@
    
 </body>
  <script src="/data/nav.js"></script>
+ <script src="/data/cambioIdiomaFAQ.js"></script>
 </html>
